--- a/Jane2zWaDa3wa/res/layout/splashhome.xml
+++ b/Jane2zWaDa3wa/res/layout/splashhome.xml
@@ -1,12 +1,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/principal_layout"
-    android:layout_width="640px"
-    android:layout_height="1136px"
-    android:layout_gravity="center">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_gravity="center"
+    android:background="@drawable/splashhome">
     
-    <ImageView android:layout_width="640px"
-        android:layout_height="1136px"
-        android:src="@drawable/splashhome"
-        android:layout_centerInParent="true"/>
 
 </RelativeLayout>
