--- a/Jane2zWaDa3wa/res/layout/activity_main.xml
+++ b/Jane2zWaDa3wa/res/layout/activity_main.xml
@@ -1,33 +1,33 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/principal_layout"
-    android:layout_width="640px"
-    android:layout_height="1136px"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:layout_gravity="center"
-    android:background="#39acdd" >
+    android:background="@color/color_green" >
 
     <RelativeLayout
         android:id="@+id/top"
-        android:layout_width="640px"
-        android:layout_height="95px" 
-        android:background="#1a435d">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" 
+        android:background="@color/color_green">
 
         <Button
             android:id="@+id/search"
-            android:layout_width="98px"
-            android:layout_height="95px" 
+            android:layout_width="50dp"
+            android:layout_height="50dp" 
             android:layout_alignParentLeft="true"
             android:background="@drawable/search"/>
         
           <ImageView
-            android:layout_width="444px"
-            android:layout_height="95px" 
+            android:layout_width="wrap_content"
+            android:layout_height="50dp" 
             android:layout_centerHorizontal="true"
             android:background="@drawable/sahih_boukhari"/>
         
         <Button
             android:id="@+id/menu"
-            android:layout_width="98px"
-            android:layout_height="95px" 
+            android:layout_width="50dp"
+            android:layout_height="50dp" 
             android:layout_alignParentRight="true"
             android:background="@drawable/menu"/>
     </RelativeLayout>
@@ -46,7 +46,7 @@
 
         <ListView
             android:id="@+id/right_drawer"
-            android:layout_width="350px"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="right"
             android:background="#2f3d4c"
@@ -59,14 +59,14 @@
     
     <FrameLayout
         android:id="@+id/fragment_view"
-        android:layout_width="640px"
-    	android:layout_height="1136px">
+        android:layout_width="match_parent"
+    	android:layout_height="match_parent">
     </FrameLayout>
     
     <FrameLayout
         android:id="@+id/new_fragment_view"
-        android:layout_width="640px"
-    	android:layout_height="1136px">
+        android:layout_width="match_parent"
+    	android:layout_height="match_parent">
     </FrameLayout>
 
 </RelativeLayout>
