--- a/Jane2zWaDa3wa/res/values/colors.xml
+++ b/Jane2zWaDa3wa/res/values/colors.xml
@@ -10,5 +10,9 @@
     <color name="shadow_transparent_light">#33000000</color>
     <color name="blue_dark">#1A435D</color>
     <color name="blue_light">#FF39A9D9</color>
-
+    
+    <color name="color_beige">#A98333</color>
+    <color name="color_green">#254C31</color>
+    <color name="color_gray">#EDEEED</color>
+    <color name="color_yellow">#E7BE5B</color>
 </resources>
