--- a/Jane2zWaDa3wa/res/layout/fragment_da3awi.xml
+++ b/Jane2zWaDa3wa/res/layout/fragment_da3awi.xml
@@ -11,7 +11,7 @@
         android:text="@string/empty_list"
         android:textSize="20sp"
         android:maxLines="1"
-        android:textColor="#000"
+        android:textColor="#fff"
         android:visibility="gone" />
 
     <ListView
