--- a/Jane2zWaDa3wa/res/layout/index_activity.xml
+++ b/Jane2zWaDa3wa/res/layout/index_activity.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/index_bg"
-    android:orientation="vertical" >
+    android:background="@drawable/index_bg" >
 
     <RelativeLayout
+        android:id="@+id/top_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="270dp" >
+        android:layout_above="@+id/jana2ez" >
 
         <TextView
-            android:id="@+id/place"
+            android:id="@+id/txv_place"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
@@ -28,7 +28,7 @@
             android:layout_centerInParent="true" />
 
         <TextView
-            android:id="@+id/date"
+            android:id="@+id/txv_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
@@ -43,22 +43,23 @@
         android:id="@+id/jana2ez"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="20dp"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
         android:background="@drawable/btn_jana2ez" />
 
     <Button
         android:id="@+id/dourouss"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="15dp"
-        android:background="@drawable/btn_dourouss" />
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/btn_dourouss"
+        android:layout_below="@+id/jana2ez" />
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp" >
+        android:layout_alignParentBottom="true">
 
         <Button
             android:id="@+id/settings"
@@ -98,5 +99,12 @@
             android:layout_marginLeft="3dp"
             android:background="@drawable/btn_choice_medina" />
     </RelativeLayout>
+    
+    <FrameLayout
+        android:id="@+id/fragment_view"
+        android:layout_width="match_parent"
+    	android:layout_height="match_parent">
+    </FrameLayout>
+    
 
-</LinearLayout>
+</RelativeLayout>
