--- a/Jane2zWaDa3wa/res/layout/index_activity.xml
+++ b/Jane2zWaDa3wa/res/layout/index_activity.xml
@@ -8,7 +8,9 @@
         android:id="@+id/top_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/jana2ez" >
+        android:layout_above="@+id/jana2ez" 
+        android:layout_marginBottom="7dp"
+        >
 
         <TextView
             android:id="@+id/txv_place"
@@ -32,13 +34,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:layout_marginRight="10dp"
+            android:layout_marginRight="0dp"
             android:layout_toLeftOf="@+id/center_layout"
-            android:text="5 شعبان 1453 ه."
             android:textColor="#fff"
             android:textSize="23sp" />
     </RelativeLayout>
 
+<!--     android:text="5 شعبان 1453 ه." -->
+    
     <Button
         android:id="@+id/jana2ez"
         android:layout_width="wrap_content"
