--- a/Jane2zWaDa3wa/res/layout/activity_main.xml
+++ b/Jane2zWaDa3wa/res/layout/activity_main.xml
@@ -46,15 +46,15 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
-        <ListView
-            android:id="@+id/right_drawer"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_gravity="right"
-            android:background="@color/color_green"
-            android:choiceMode="singleChoice"
-            android:divider="@android:color/transparent"
-            android:dividerHeight="0dp" />
+<!--         <ListView -->
+<!--             android:id="@+id/right_drawer" -->
+<!--             android:layout_width="wrap_content" -->
+<!--             android:layout_height="match_parent" -->
+<!--             android:layout_gravity="right" -->
+<!--             android:background="@color/color_green" -->
+<!--             android:choiceMode="singleChoice" -->
+<!--             android:divider="@android:color/transparent" -->
+<!--             android:dividerHeight="0dp" /> -->
 
 
     </android.support.v4.widget.DrawerLayout>
