--- a/Jane2zWaDa3wa/res/layout/fragment_mosques.xml
+++ b/Jane2zWaDa3wa/res/layout/fragment_mosques.xml
@@ -102,6 +102,7 @@
         android:layout_marginTop="30dp"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
-        android:layout_marginBottom="5dp"/>
+        android:layout_marginBottom="5dp"
+        android:rotationY="180"/>
 
 </RelativeLayout>
