--- a/Jane2zWaDa3wa/res/values/styles.xml
+++ b/Jane2zWaDa3wa/res/values/styles.xml
@@ -14,4 +14,6 @@
         <item name="android:windowFullscreen">true</item>
     </style>
 
+    <style name="Widget.GifMoviewView" parent="@android:style/Widget"></style>
+    
 </resources>
