--- a/Jane2zWaDa3wa/res/layout/index_activity.xml
+++ b/Jane2zWaDa3wa/res/layout/index_activity.xml
@@ -1,93 +1,144 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/index_bg" >
+    android:layout_height="match_parent" >
 
-    <RelativeLayout
-        android:id="@+id/top_layout"
+    <android.support.v4.widget.DrawerLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/drawer_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/jana2ez"
-        android:layout_marginBottom="7dp" >
+        android:layout_height="match_parent" >
 
-        <TextView
-            android:id="@+id/txv_place"
+        <RelativeLayout
+            android:id="@+id/moving_layout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="10dp"
-            android:layout_toRightOf="@+id/center_layout"
-            android:gravity="center"
-            android:text="@string/amaken"
-            android:textColor="#85dda8"
-            android:textSize="23sp" />
+            android:layout_height="match_parent"
+            android:background="@drawable/index_bg" >
 
-        <View
-            android:id="@+id/center_layout"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_centerInParent="true" />
+            <RelativeLayout
+                android:id="@+id/top_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_above="@+id/jana2ez"
+                android:layout_marginBottom="7dp" >
 
-        <TextView
-            android:id="@+id/txv_date"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="0dp"
-            android:layout_toLeftOf="@+id/center_layout"
-            android:textColor="#fff"
-            android:textSize="23sp" />
-    </RelativeLayout>
+                <TextView
+                    android:id="@+id/txv_place"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="10dp"
+                    android:layout_toRightOf="@+id/center_layout"
+                    android:gravity="center"
+                    android:text="@string/amaken"
+                    android:textColor="#85dda8"
+                    android:textSize="23sp" />
 
-    <!-- android:text="5 شعبان 1453 ه." -->
+                <View
+                    android:id="@+id/center_layout"
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:layout_centerInParent="true" />
 
-    <Button
-        android:id="@+id/jana2ez"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:background="@drawable/btn_jana2ez" />
+                <TextView
+                    android:id="@+id/txv_date"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_marginRight="0dp"
+                    android:layout_toLeftOf="@+id/center_layout"
+                    android:textColor="#fff"
+                    android:textSize="23sp" />
+            </RelativeLayout>
 
-    <Button
-        android:id="@+id/dourouss"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/jana2ez"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="10dp"
-        android:background="@drawable/btn_dourouss" />
+            <Button
+                android:id="@+id/jana2ez"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:background="@drawable/btn_jana2ez" />
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true" 
-        android:layout_marginBottom="10dp">
+            <Button
+                android:id="@+id/dourouss"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/jana2ez"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="10dp"
+                android:background="@drawable/btn_dourouss" />
 
-        <Button
-            android:id="@+id/settings"
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_marginBottom="10dp" >
+
+                <Button
+                    android:id="@+id/settings"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="10dp"
+                    android:layout_toLeftOf="@+id/share"
+                    android:background="@drawable/btn_settings" />
+
+                <Button
+                    android:id="@+id/share"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:background="@drawable/btn_share" />
+
+                <Button
+                    android:id="@+id/about"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:layout_toRightOf="@+id/share"
+                    android:background="@drawable/btn_about" />
+            </RelativeLayout>
+
+            <Button
+                android:id="@+id/btn_menu_outside"
+                android:layout_width="35dp"
+                android:layout_height="30dp"
+                android:layout_alignParentRight="true"
+                android:layout_margin="25dp"
+                android:background="@drawable/btn_menu" />
+        </RelativeLayout>
+
+        <LinearLayout
+            android:id="@+id/drawer_linear"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="10dp"
-            android:layout_toLeftOf="@+id/share"
-            android:background="@drawable/btn_settings" />
+            android:layout_height="match_parent"
+            android:layout_gravity="end"
+            android:background="@drawable/blank_bg"
+            android:orientation="vertical" >
 
-        <Button
-            android:id="@+id/share"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:background="@drawable/btn_share" />
+            <RelativeLayout
+                android:id="@+id/drawer_header"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" >
 
-        <Button
-            android:id="@+id/about"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_toRightOf="@+id/share"
-            android:background="@drawable/btn_about" />
-    </RelativeLayout>
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:background="@drawable/ghiras_logo"
+                    android:scaleType="centerInside" />
+            </RelativeLayout>
+
+            <ListView
+                android:id="@+id/listView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"
+                android:background="@android:color/transparent"
+                android:divider="#fff"
+                android:dividerHeight="2dp"
+                android:gravity="center" />
+        </LinearLayout>
+    </android.support.v4.widget.DrawerLayout>
 
     <FrameLayout
         android:id="@+id/fragment_view"
