--- a/Jane2zWaDa3wa/res/values/colors.xml
+++ b/Jane2zWaDa3wa/res/values/colors.xml
@@ -15,4 +15,7 @@
     <color name="color_green">#254C31</color>
     <color name="color_gray">#EDEEED</color>
     <color name="color_yellow">#E7BE5B</color>
+    
+    
+    <color name="gold">#a98333</color>
 </resources>
