--- a/Jane2zWaDa3wa/res/layout/fragment_login.xml
+++ b/Jane2zWaDa3wa/res/layout/fragment_login.xml
@@ -21,7 +21,8 @@
             android:hint="@string/hint_login"
             android:paddingRight="20dp"
             android:textColor="@color/gold"
-            android:textSize="25sp" />
+            android:textSize="25sp" 
+            android:nextFocusDown="@+id/edit_pwd"/>
 
         <EditText
             android:id="@+id/edit_pwd"
