--- a/Jane2zWaDa3wa/res/layout/activity_main.xml
+++ b/Jane2zWaDa3wa/res/layout/activity_main.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/principal_layout"
     android:layout_width="match_parent"
@@ -8,67 +9,96 @@
     <RelativeLayout
         android:id="@+id/top"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" 
-        android:background="@color/color_green"
-        >
+        android:layout_height="wrap_content"
+        android:background="@color/color_green" >
 
         <Button
             android:id="@+id/search"
             android:layout_width="50dp"
-            android:layout_height="50dp" 
+            android:layout_height="50dp"
             android:layout_alignParentLeft="true"
-            android:background="@drawable/search"/>
-        
-          <ImageView
+            android:background="@drawable/search" />
+
+        <ImageView
             android:id="@+id/header"
             android:layout_width="265dp"
-            android:layout_height="50dp" 
+            android:layout_height="50dp"
             android:layout_centerHorizontal="true"
-            android:background="@drawable/jana2ez"/>
-        
+            android:background="@drawable/jana2ez" />
+
         <Button
             android:id="@+id/menu"
             android:layout_width="50dp"
-            android:layout_height="50dp" 
+            android:layout_height="50dp"
             android:layout_alignParentRight="true"
-            android:background="@drawable/menu"/>
+            android:background="@drawable/menu" />
     </RelativeLayout>
 
     <android.support.v4.widget.DrawerLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/drawer_layout"
-        android:layout_below="@id/top"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" >
+        android:layout_height="match_parent"
+        android:layout_below="@id/top" >
 
         <RelativeLayout
-            android:id="@+id/content_frame"
+            android:id="@+id/moving_layout"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent" >
 
-<!--         <ListView -->
-<!--             android:id="@+id/right_drawer" -->
-<!--             android:layout_width="wrap_content" -->
-<!--             android:layout_height="match_parent" -->
-<!--             android:layout_gravity="right" -->
-<!--             android:background="@color/color_green" -->
-<!--             android:choiceMode="singleChoice" -->
-<!--             android:divider="@android:color/transparent" -->
-<!--             android:dividerHeight="0dp" /> -->
+            <RelativeLayout
+                android:id="@+id/content_frame"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
 
+            <FrameLayout
+                android:id="@+id/fragment_view"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" >
+            </FrameLayout>
 
+            <FrameLayout
+                android:id="@+id/new_fragment_view"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" >
+            </FrameLayout>
+        </RelativeLayout>
+
+        <LinearLayout
+            android:id="@+id/drawer_linear"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="end"
+            android:background="#254c30"
+            android:orientation="vertical" >
+
+            <RelativeLayout
+                android:id="@+id/drawer_header"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" >
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/drawer_header"
+                    android:scaleType="centerInside" />
+            </RelativeLayout>
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="#2c7541"
+                android:scaleType="centerInside" />
+
+            <ListView
+                android:id="@+id/listView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@android:color/transparent"
+                android:divider="#2c7541"
+                android:dividerHeight="1dp"
+                android:gravity="center" />
+        </LinearLayout>
     </android.support.v4.widget.DrawerLayout>
-    
-    <FrameLayout
-        android:id="@+id/fragment_view"
-        android:layout_width="match_parent"
-    	android:layout_height="match_parent">
-    </FrameLayout>
-    
-    <FrameLayout
-        android:id="@+id/new_fragment_view"
-        android:layout_width="match_parent"
-    	android:layout_height="match_parent">
-    </FrameLayout>
 
 </RelativeLayout>
