--- a/Jane2zWaDa3wa/res/layout/fragment_login.xml
+++ b/Jane2zWaDa3wa/res/layout/fragment_login.xml
@@ -2,51 +2,75 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/index_bg" >
+    android:background="@drawable/blank_bg" >
 
     <LinearLayout
         android:id="@+id/edit_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_centerInParent="true"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
+        android:layout_margin="10dp"
+        android:background="#fff"
         android:orientation="vertical" >
+
+        <TextView
+            android:id="@+id/lbl_login"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="50dp"
+            android:gravity="right|center_vertical"
+            android:paddingRight="20dp"
+            android:text="@string/hint_login"
+            android:textColor="#225836"
+            android:textSize="25sp" />
 
         <EditText
             android:id="@+id/edit_login"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:background="@drawable/edit_login_bg"
             android:gravity="right|center_vertical"
-            android:hint="@string/hint_login"
+            android:nextFocusDown="@+id/edit_pwd"
             android:paddingRight="20dp"
-            android:textColor="@color/gold"
-            android:textSize="25sp" 
-            android:nextFocusDown="@+id/edit_pwd"/>
+            android:textColor="#225836"
+            android:textSize="14sp" />
+
+        <TextView
+            android:id="@+id/lbl_pwd"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="right|center_vertical"
+            android:paddingRight="20dp"
+            android:text="@string/hint_pwd"
+            android:textColor="#225836"
+            android:textSize="25sp" />
 
         <EditText
             android:id="@+id/edit_pwd"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:background="@drawable/edit_login_bg"
             android:gravity="right|center_vertical"
-            android:hint="@string/hint_pwd"
             android:inputType="textPassword"
             android:paddingRight="20dp"
-            android:textColor="@color/gold"
+            android:textColor="#225836"
+            android:textSize="14sp" />
+
+        <Button
+            android:id="@+id/btn_login"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_margin="20dp"
+            android:background="@drawable/login_login_btn"
+            android:gravity="center"
+            android:text="@string/login"
+            android:textColor="#fff"
             android:textSize="25sp" />
     </LinearLayout>
-
-    <Button
-        android:id="@+id/btn_login"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/edit_layout"
-        android:padding="5dp"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="40dp"
-        android:background="#264631"
-        android:text="@string/login"
-        android:textColor="@color/gold"
-        android:textSize="25sp" />
 
 </RelativeLayout>
