--- a/Jane2zWaDa3wa/res/layout/settings.xml
+++ b/Jane2zWaDa3wa/res/layout/settings.xml
@@ -51,14 +51,14 @@
             
         </LinearLayout>
 
-        <Button
-            android:id="@+id/medina_choice"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="50dp"
-            android:background="@drawable/btn_choice_medina" />
+<!--         <Button -->
+<!--             android:id="@+id/medina_choice" -->
+<!--             android:layout_width="wrap_content" -->
+<!--             android:layout_height="wrap_content" -->
+<!--             android:layout_alignParentBottom="true" -->
+<!--             android:layout_centerHorizontal="true" -->
+<!--             android:layout_marginBottom="50dp" -->
+<!--             android:background="@drawable/btn_choice_medina" /> -->
     </RelativeLayout>
 
 </RelativeLayout>
