--- a/Jane2zWaDa3wa/res/layout/fragment_login.xml
+++ b/Jane2zWaDa3wa/res/layout/fragment_login.xml
@@ -4,6 +4,34 @@
     android:layout_height="match_parent"
     android:background="@drawable/blank_bg" >
 
+    <RelativeLayout
+        android:id="@+id/top"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:background="@color/color_green" >
+
+        <TextView
+            android:id="@+id/top_header"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:layout_centerHorizontal="true"
+            android:background="@color/color_green"
+            android:gravity="center"
+            android:maxLines="1"
+            android:text="@string/login_title"
+            android:textColor="#fff"
+            android:textStyle="bold"
+            android:textSize="25sp" />
+        
+          <Button
+            android:id="@+id/btn_back"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_alignParentRight="true"
+            android:background="@drawable/back_list" />
+    </RelativeLayout>
+    
     <LinearLayout
         android:id="@+id/edit_layout"
         android:layout_width="match_parent"
@@ -11,7 +39,8 @@
         android:layout_centerInParent="true"
         android:layout_margin="10dp"
         android:background="#fff"
-        android:orientation="vertical" >
+        android:orientation="vertical" 
+        android:layout_below="@+id/top">
 
         <TextView
             android:id="@+id/lbl_login"
@@ -21,8 +50,8 @@
             android:gravity="right|center_vertical"
             android:paddingRight="20dp"
             android:text="@string/hint_login"
-            android:textColor="#225836"
-            android:textSize="25sp" />
+            android:textColor="@color/jd_green"
+            android:textSize="20sp" />
 
         <EditText
             android:id="@+id/edit_login"
@@ -34,8 +63,8 @@
             android:gravity="right|center_vertical"
             android:nextFocusDown="@+id/edit_pwd"
             android:paddingRight="20dp"
-            android:textColor="#225836"
-            android:textSize="14sp" />
+            android:textColor="@color/gold"
+            android:textSize="18sp" />
 
         <TextView
             android:id="@+id/lbl_pwd"
@@ -44,8 +73,8 @@
             android:gravity="right|center_vertical"
             android:paddingRight="20dp"
             android:text="@string/hint_pwd"
-            android:textColor="#225836"
-            android:textSize="25sp" />
+            android:textColor="@color/jd_green"
+            android:textSize="20sp" />
 
         <EditText
             android:id="@+id/edit_pwd"
@@ -57,20 +86,20 @@
             android:gravity="right|center_vertical"
             android:inputType="textPassword"
             android:paddingRight="20dp"
-            android:textColor="#225836"
-            android:textSize="14sp" />
+            android:textColor="@color/gold"
+            android:textSize="18sp" />
 
         <Button
             android:id="@+id/btn_login"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="35dp"
             android:layout_gravity="center_horizontal"
             android:layout_margin="20dp"
             android:background="@drawable/login_login_btn"
             android:gravity="center"
             android:text="@string/login"
             android:textColor="#fff"
-            android:textSize="25sp" />
+            android:textSize="22sp" />
     </LinearLayout>
 
 </RelativeLayout>
